# nvpro_core2

./: .gitmodules  CMakeLists.txt  README.md
PACKAGE-LICENSES/: open_iconic-LICENSE.md
cmake/: CompilerGlslShader.cmake  CompilerSlangShader.cmake  DownloadPackage.cmake  FindNGX.cmake  FindSlang.cmake  FindWebP.cmake  Setup.cmake  Utilities.cmake
nvaftermath/: NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  aftermath.cpp
nvapp/: application.cpp  application.hpp  elem_camera.cpp  elem_camera.hpp  elem_dbgprintf.cpp  elem_dbgprintf.hpp  elem_default_menu.cpp  elem_inspector.cpp  elem_inspector.hpp  elem_logger.cpp  elem_profiler.cpp  elem_profiler.hpp  elem_sequencer.hpp  frame_pacer.cpp  frame_pacer.hpp
nvgl/: CMakeLists.txt  error.hpp  nvpsystem_win32.cpp  profiler_gl.cpp  programmanager.cpp  programmanager.hpp  shaderfilemanager.hpp
nvgpu_monitor/: CMakeLists.txt  elem_gpu_monitor.cpp
nvgui/: CMakeLists.txt  camera.cpp  camera.hpp  enum_registry.cpp  file_dialog.hpp  file_dialog_linux.cpp  file_dialog_macos.mm  file_dialog_win32.cpp  fonts.cpp  fonts.hpp  hover_scrolling.hpp  property_editor.cpp  property_editor.hpp  settings_handler.cpp  settings_handler.hpp  sky.hpp  style.hpp  tonemapper.cpp  tonemapper.hpp
nvimageformats/: nv_dds.cpp  nv_dds.h  nv_ktx.cpp  nv_ktx.h  texture_formats.cpp  texture_formats.h
nvnsight/: example_usage.cpp
nvshaders/: bsdf_functions.h.slang  functions.h.slang  gltf_scene_io.h.slang  gltf_vertex_access.h.slang  hdr_charlie_brdf_lut.slang  hdr_integrate_brdf.slang  hdr_prefilter_diffuse.slang  hdr_prefilter_glossy.slang  light_contrib.h.slang  pbr_direct_eval.h.slang  pbr_ggx_microfacet.h.slang  pbr_ibl_eval.h.slang  pbr_material_eval.h.slang  pbr_material_types.h.slang  slang_types.h  tonemap_functions.h.slang  tonemap_io.h.slang  tonemapper.slang
nvshaders_host/: hdr_env_dome.cpp  hdr_env_dome.hpp  pbr_sheen_lut.cpp  pbr_sheen_lut.hpp  sky.hpp  tonemapper.cpp  tonemapper.hpp
nvslang/: CMakeLists.txt  slang.cpp  slang.hpp
nvutils/: CMakeLists.txt  bit_array.cpp  camera_manipulator.cpp  camera_manipulator.hpp  file_mapping.cpp  file_operations.cpp  id_pool.cpp  id_pool.hpp  logger.cpp  logger.hpp  parallel_work.hpp  parameter.cpp  parameter.hpp  parameter_parser.cpp  parameter_parser.hpp  parameter_registry.cpp  parameter_registry.hpp  parameter_sequencer.cpp  parameter_sequencer.hpp  profiler.cpp  profiler.hpp  timers.cpp  timers.hpp
nvvk/: acceleration_structures.cpp  acceleration_structures.hpp  barriers.cpp  barriers.hpp  buffer_suballocator.cpp  buffer_suballocator.hpp  check_error.cpp  check_error.hpp  command_pools.cpp  context.cpp  context.hpp  descriptor_heap.cpp  descriptor_heap.hpp  descriptor_heap_writer.cpp  descriptor_heap_writer.hpp  descriptors.cpp  descriptors.hpp  formats.cpp  formats.hpp  gbuffers.cpp  gbuffers.hpp  graphics_pipeline.cpp  hdr_ibl.cpp  hdr_ibl.hpp  helpers.cpp  helpers.hpp  physical_device.hpp  pipeline.hpp  profiler_vk.cpp  profiler_vk.hpp  queue.cpp  queue.hpp  ray_picker.cpp  ray_picker.hpp  resource_allocator.cpp  resource_allocator.hpp  sampler_pool.cpp  sampler_pool.hpp  sbt_generator.cpp  semaphore.cpp  (+6 more)
nvvkglsl/: glsl.cpp
nvvkgltf/: CMakeLists.txt  animation_pointer.cpp  animation_pointer.hpp  camera_utils.hpp  scene.cpp  scene.hpp  scene_rtx.cpp  scene_rtx.hpp  scene_vk.cpp  scene_vk.hpp  tinygltf_utils.cpp  tinygltf_utils.hpp
project_template/: CMakeLists.txt
